VLC should be able to pause itself when an another media player is started and VLC should be able to pause when a media player is already playing audio in background.
Yes, the summary and description are inaccurate, see the linked kde forum thread. Can't change them though shrug.
Rémi Denis-Courmontchanged title from Support PulseAudio corking so that VLC can pause and be paused when other media player is played to Libvlc: expose cork events
changed title from Support PulseAudio corking so that VLC can pause and be paused when other media player is played to Libvlc: expose cork events
Corking and uncorking events can be added to libvlc_media_player. I suspect that automatically pausing and resuming might break a lot of applications though.
Yes, the summary and description are inaccurate, see the linked kde forum thread. Can't change them though shrug.
This bug report remains very unclear. Do you want the library to pause the media player automatically? Do you want to have an option for the media player to pause automatically? Or do you want to have cork and uncork events delivered by the event callback?
Do you want the library to pause the media player automatically? Do you want to have an option for the media player to pause automatically? Or do you want to have cork and uncork events delivered by the event callback?
I agree that pausing automatically potentially has unintended consequences. Sending a cork event via the callback seems absolutely sufficient and in general probably is more useful anyway (e.g. allows an app to do additional things on un/corking).
Yes, the summary and description are inaccurate, see the linked kde forum thread. Can't change them though shrug.
This bug report remains very unclear. Do you want the library to pause the media player automatically? Do you want to have an option for the media player to pause automatically? Or do you want to have cork and uncork events delivered by the event callback?
Pardon me for an ambiguous bug report.
On Android, when audio or video is being played and you start another media player the previous event is suppressed. My understanding is that, on Android the developer of the app has to decid what happens to the app when it goes in background via the Activity lifecycle methods. Generally, Two media events are not allowed to occur at the same time. It would be great to have a similar experience on desktop.